...
        currentQuestionIndex += 1
    }
    
    private func proceedToNextQuestionOrResults() {
        if self.isLastQuestion() {
            let results = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: self.makeStatisticsMessage(),
                buttonText: "Сыграем еще раз?"
            )
            viewController?.show(quiz: results)
        } else {
            self.switchToNextQuestion()
            self.questionFactory?.requestNextQuestion()
        }
...
